# 2021_20311170

./: .gitignore  Doxyfile  calc_8cpp_source.html  files.html  globals.html  globals_func.html  maths_8cpp_source.html  maths_8h.html  maths_8h_source.html  test1_8cpp_source.html
.github/workflows/: cmake-test.yml  doxygen-deploy.yml  make-test.yml
Worksheet2/: README.md  hi_and_date.cmd  last-commit.cmd
Worksheet3/: adder.cpp
Worksheet3/calc_dy/: adder.exp  adder.h  adder.lib
Worksheet4/hello_cmake/: CMakeLists.txt  hello.cpp
Worksheet4/hello_cmake/buildM/: CMakeCache.txt  ZERO_CHECK.vcxproj  cmake_install.cmake  (+2 more)
Worksheet5/exercise2/hello_qt_cm/: CMakeLists.txt  edititemdialog.cpp  edititemdialog.h  edititemdialog.ui  hello_qt.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stockitem.cpp  stockitem.h  stockitemlistmodel.cpp
Worksheet5/exercise2/hello_qt_cm/Icons/: icons.qrc
Worksheet5/hello_qt_cm/: CMakeLists.txt
Worksheet7/: CMakeLists.txt  Doxyfile  adder.cpp  calc.cpp  maths.cpp  maths.h  test1.cpp
Worksheet7/Excercise1/: adder.h
Worksheet7/Excercise2/: CMakeLists.txt
Worksheet7/Exercise2/: test1.cpp
Worksheet7/html/: calc_8cpp_source.html  files.html  maths_8cpp_source.html  maths_8h_source.html  test1_8cpp_source.html
Worksheet7/latex/: calc_8cpp_source.tex  files.tex  maths_8cpp_source.tex  maths_8h_source.tex  refman.tex  test1_8cpp_source.tex
Worksheet8/: CMakeLists.txt  maths.h
Worksheet_3/calc_program/: calc.cpp
Worksheet_4/hello_cmake/calc_cmake/: CMakeLists.txt  adder.cpp
Worksheet_4/hello_cmake/calc_cmake/msvc_dynamic/: ZERO_CHECK.vcxproj  maths.vcxproj
Worksheet_4/hello_cmake/calc_cmake/msvc_dynamic/calc.dir/Debug/calc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog
Worksheet_4/hello_cmake/calc_cmake/msvc_dynamic/maths.dir/Debug/: maths.dll.recipe
Worksheet_4/hello_cmake/calc_cmake/msvc_dynamic/maths.dir/Debug/maths.tlog/: link.write.1.tlog  maths.write.1u.tlog
Worksheet_4/hello_cmake/calc_cmake/msvc_dynamic/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
Worksheet_4/hello_cmake/calc_cmake/msvc_static/: ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  calc.vcxproj.filters  cmake_install.cmake
Worksheet_4/hello_cmake/calc_cmake/msvc_static/calc.dir/Debug/: calc.ilk
Worksheet_4/hello_cmake/calc_cmake/msvc_static/calc.dir/Debug/calc.tlog/: CL.write.1.tlog  link.write.1.tlog
Worksheet_4/hello_cmake/calc_cmake/msvc_static/maths.dir/Debug/maths.tlog/: CL.command.1.tlog
Worksheet_5/: hello_qt.cpp
html/: dir_d0b097a76a48c330035f8d5d8d8e9044.html  files.html  maths_8h_source.html
latex/: files.tex  maths_8h_source.tex
search/: all_0.js  all_1.js  files_0.js  functions_0.js  searchdata.js
(+78 files in other folders)
